location和mailBox初版实现1